--- a/SuperPong/SuperPong.fsproj
+++ b/SuperPong/SuperPong.fsproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="MonoGame.Content.Builder" Version="3.7.0.9" />
+    <PackageReference Include="MonoGame.Extended.Graphics" Version="3.7.0" />
     <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.8.0.1" />
   </ItemGroup>
 
